Drop media session on playback error; avoids idle suspension.

Avoids leaving a stale interactive session when the player is in
the error state and also avoids idle suspension from running later
and triggering an invalid state error.

The pipeline has already released its resources internally when the
error occurred so the idle suspension is not necessary.

BUG=596157

Review URL: https://codereview.chromium.org/1815293003

Cr-Commit-Position: refs/heads/master@{#382137}

Former-commit-id: 60030663a474eb523aa9c958e5fe88fa844d8b79